--- a/charts/zalando-psql-db/templates/operator.yaml
+++ b/charts/zalando-psql-db/templates/operator.yaml
@@ -43,5 +43,6 @@ spec:
       - host    all             all             0.0.0.0/0               md5
       - hostssl all             all             0.0.0.0/0               md5
       - host    replication     all             127.0.0.1/32            md5
+      - host    replication     all             ::1/128                 md5
       - host    replication     postgres        0.0.0.0/0               md5
       - host    replication     standby         0.0.0.0/0               md5
